Done Analysis of the first set of data.

--- a/Tema 2/PracticaFinalUd2SAA.ipynb
+++ b/Tema 2/PracticaFinalUd2SAA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7f9606c4",
    "metadata": {},
    "outputs": [],
@@ -58,10 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a9c9de60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Venta_ID  Producto_ID  Vendedor_ID  Cantidad  Precio_str Sucursal  \\\n",
+      "Fecha                                                                           \n",
+      "2023-01-01         1          101            1      20.0         5.0    norte   \n",
+      "2023-01-01         2          102            2       5.0        20.5      sur   \n",
+      "2023-01-02         3          101            1      25.0         5.5    norte   \n",
+      "2023-01-02         4          103            1       7.0         8.0    norte   \n",
+      "2023-01-03         5          104            2      10.0         3.0      sur   \n",
+      "\n",
+      "           Nombre_Producto Categoría Nombre_Vendedor  Ingresos_Totales  \n",
+      "Fecha                                                                   \n",
+      "2023-01-01            Café    Bebida             Ana             100.0  \n",
+      "2023-01-01           Tarta    Postre            Luis             102.5  \n",
+      "2023-01-02            Café    Bebida             Ana             137.5  \n",
+      "2023-01-02          Pastel    Postre             Ana              56.0  \n",
+      "2023-01-03              Té    Bebida            Luis              30.0  \n"
+     ]
+    }
+   ],
    "source": [
     "df_ventas = pd.DataFrame(datos_ventas)\n",
     "df_productos = pd.DataFrame(datos_productos)\n",
@@ -73,17 +95,103 @@
     "\n",
     "df_ventas['Sucursal'] = df_ventas['Sucursal'].str.strip().str.lower()\n",
     "\n",
-    "df_ventas['Precio'] = df_ventas['Precio_str'].str.replace('[^0-9.]', '', regex=True).astype(float)\n",
+    "df_ventas['Precio_str'] = df_ventas['Precio_str'].str.replace('[^0-9.]', '', regex=True).astype(float)\n",
     "\n",
     "df_final = df_ventas.merge(df_productos, on='Producto_ID', how='left')\n",
     "df_final = df_final.merge(df_vendedores, on='Vendedor_ID', how='left')\n",
     "\n",
-    "df_final['Ingresos_Totales'] = df_final['Cantidad'] * df_final['Precio']\n",
+    "df_final['Ingresos_Totales'] = df_final['Cantidad'] * df_final['Precio_str']\n",
     "\n",
     "df_final['Fecha'] = pd.to_datetime(df_final['Fecha'])\n",
     "df_final = df_final.set_index('Fecha')\n",
     "\n",
     "print(df_final.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e7012a6",
+   "metadata": {},
+   "source": [
+    "## Análisis Exploratorio y Creación de Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7b092506",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresos totales por Categoría y por Vendedor:\n",
+      "Categoría  Nombre_Vendedor\n",
+      "Bebida     Ana                407.0\n",
+      "           Luis                30.0\n",
+      "Postre     Ana                124.0\n",
+      "           Luis               228.5\n",
+      "Name: Ingresos_Totales, dtype: float64 \n",
+      "\n",
+      "Cantidad total de productos vendidos por Categoría y Sucursal:\n",
+      "Sucursal   norte   sur\n",
+      "Categoría             \n",
+      "Bebida      78.0  10.0\n",
+      "Postre      15.0  11.0 \n",
+      "\n",
+      "Producto Estrella por Categoría:\n",
+      "  Categoría Nombre_Producto  Ingresos_Totales\n",
+      "0    Bebida            Café             407.0\n",
+      "1    Postre           Tarta             228.5 \n",
+      "\n",
+      "DataFrame final con nuevas columnas:\n",
+      "           Nombre_Producto Categoría Nombre_Vendedor  Ingresos_Totales  \\\n",
+      "Fecha                                                                    \n",
+      "2023-01-01            Café    Bebida             Ana             100.0   \n",
+      "2023-01-01           Tarta    Postre            Luis             102.5   \n",
+      "2023-01-02            Café    Bebida             Ana             137.5   \n",
+      "2023-01-02          Pastel    Postre             Ana              56.0   \n",
+      "2023-01-03              Té    Bebida            Luis              30.0   \n",
+      "\n",
+      "           Tipo_Venta  Pct_Ingreso_Categoria  \n",
+      "Fecha                                         \n",
+      "2023-01-01     Grande              22.883295  \n",
+      "2023-01-01     Grande              29.078014  \n",
+      "2023-01-02     Grande              31.464531  \n",
+      "2023-01-02     Grande              15.886525  \n",
+      "2023-01-03     Normal               6.864989  \n"
+     ]
+    }
+   ],
+   "source": [
+    "ingresos_categoria_vendedor = df_final.groupby(['Categoría', 'Nombre_Vendedor'])['Ingresos_Totales'].sum()\n",
+    "print(\"Ingresos totales por Categoría y por Vendedor:\")\n",
+    "print(ingresos_categoria_vendedor, '\\n')\n",
+    "\n",
+    "cantidad_categoria_sucursal = df_final.pivot_table(values='Cantidad', index='Categoría', columns='Sucursal', aggfunc='sum')\n",
+    "print(\"Cantidad total de productos vendidos por Categoría y Sucursal:\")\n",
+    "print(cantidad_categoria_sucursal, '\\n')\n",
+    "\n",
+    "df_final['Tipo_Venta'] = np.where(df_final['Ingresos_Totales'] > 50, 'Grande', 'Normal')\n",
+    "\n",
+    "producto_estrella = (\n",
+    "    df_final.groupby(['Categoría', 'Nombre_Producto'])['Ingresos_Totales']\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "producto_estrella = producto_estrella.loc[\n",
+    "    producto_estrella.groupby('Categoría')['Ingresos_Totales'].idxmax()\n",
+    "]\n",
+    "print(\"Producto Estrella por Categoría:\")\n",
+    "print(producto_estrella.reset_index(drop=True), '\\n')\n",
+    "\n",
+    "df_final['Pct_Ingreso_Categoria'] = (\n",
+    "    df_final['Ingresos_Totales'] / df_final.groupby('Categoría')['Ingresos_Totales'].transform('sum') * 100\n",
+    ")\n",
+    "\n",
+    "print(\"DataFrame final con nuevas columnas:\")\n",
+    "print(df_final[['Nombre_Producto', 'Categoría', 'Nombre_Vendedor', 'Ingresos_Totales', 'Tipo_Venta', 'Pct_Ingreso_Categoria']].head())"
    ]
   }
  ],
@@ -94,7 +202,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.18"
   }
  },
