--- a/Tema 2/PracticaFinalUd2SAA.ipynb
+++ b/Tema 2/PracticaFinalUd2SAA.ipynb
@@ -13,7 +13,7 @@
    "id": "63e2936d",
    "metadata": {},
    "source": [
-    "## Datos base"
+    "## Parte 1: Análisis de Ventas de una Tienda"
    ]
   },
   {
@@ -192,6 +192,91 @@
     "\n",
     "print(\"DataFrame final con nuevas columnas:\")\n",
     "print(df_final[['Nombre_Producto', 'Categoría', 'Nombre_Vendedor', 'Ingresos_Totales', 'Tipo_Venta', 'Pct_Ingreso_Categoria']].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0487a33",
+   "metadata": {},
+   "source": [
+    "## Análisis Temporal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9be3eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresos Totales Diarios:\n",
+      "        Fecha  Ingresos_Totales\n",
+      "0  2023-01-01             202.5\n",
+      "1  2023-01-02             193.5\n",
+      "2  2023-01-03              30.0\n",
+      "3  2023-01-04               0.0\n",
+      "4  2023-01-05               0.0\n",
+      "5  2023-01-06               0.0\n",
+      "6  2023-01-07               0.0\n",
+      "7  2023-01-08             220.5\n",
+      "8  2023-01-09              68.0\n",
+      "9  2023-01-10               0.0\n",
+      "10 2023-01-11              75.0 \n",
+      "\n",
+      "Ingresos Totales Semanales:\n",
+      "       Fecha  Ingresos_Totales\n",
+      "0 2023-01-01             202.5\n",
+      "1 2023-01-08             444.0\n",
+      "2 2023-01-15             143.0 \n",
+      "\n",
+      "Promedio de Ingresos por Día de la Semana:\n",
+      "  Dia_Semana  Promedio_Ingresos\n",
+      "0     Sunday         105.750000\n",
+      "1     Monday          87.166667\n",
+      "2  Wednesday          75.000000\n",
+      "3    Tuesday          30.000000 \n",
+      "\n",
+      "El día con mayor promedio de ingresos es **Sunday** con $105.75 en promedio.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ingresos_diarios = df_final['Ingresos_Totales'].resample('D').sum()\n",
+    "ingresos_semanales = df_final['Ingresos_Totales'].resample('W').sum()\n",
+    "\n",
+    "#Esto se ha puesto con el reset_index para que no aparezca el texto de pandas de la operación que se ha hecho sobre la serie.\n",
+    "print(\"Ingresos Totales Diarios:\")\n",
+    "print(ingresos_diarios.reset_index(name='Ingresos_Totales'), '\\n')\n",
+    "\n",
+    "print(\"Ingresos Totales Semanales:\")\n",
+    "print(ingresos_semanales.reset_index(name='Ingresos_Totales'), '\\n')\n",
+    "\n",
+    "df_final['Dia_Semana'] = df_final.index.day_name()\n",
+    "\n",
+    "ingresos_por_dia = (\n",
+    "    df_final.groupby('Dia_Semana')['Ingresos_Totales']\n",
+    "    .mean()\n",
+    "    .sort_values(ascending=False)\n",
+    ")\n",
+    "\n",
+    "print(\"Promedio de Ingresos por Día de la Semana:\")\n",
+    "print(ingresos_por_dia.reset_index(name='Promedio_Ingresos'), '\\n')\n",
+    "\n",
+    "dia_top = ingresos_por_dia.idxmax()\n",
+    "valor_top = ingresos_por_dia.max()\n",
+    "\n",
+    "print(f\"El día con mayor promedio de ingresos es **{dia_top}** con ${valor_top:.2f} en promedio.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23f961c0",
+   "metadata": {},
+   "source": [
+    "## Parte 2: Análisis Exploratorio de Datos de Inmuebles"
    ]
   }
  ],
