--- a/Tema 2/PracticaFinalUd2SAA.ipynb
+++ b/Tema 2/PracticaFinalUd2SAA.ipynb
@@ -53,12 +53,12 @@
    "id": "8db7e649",
    "metadata": {},
    "source": [
-    "## Limpieza de datos"
+    "### Limpieza de datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "a9c9de60",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
    "id": "9e7012a6",
    "metadata": {},
    "source": [
-    "## Análisis Exploratorio y Creación de Variables"
+    "### Análisis Exploratorio y Creación de Variables"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "id": "a0487a33",
    "metadata": {},
    "source": [
-    "## Análisis Temporal"
+    "### Análisis Temporal"
    ]
   },
   {
@@ -277,6 +277,33 @@
    "metadata": {},
    "source": [
     "## Parte 2: Análisis Exploratorio de Datos de Inmuebles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "77359175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_inmuebles = {\n",
+    "    'Referencia': ['VLC-01', 'MAD-01', 'BCN-01', 'VLC-02', 'MAD-02', 'BCN-02', 'VLC-03', 'MAD-03', 'BCN-03', 'VLC-04'],\n",
+    "    'Ciudad': ['Valencia', 'Madrid', 'Barcelona', 'Valencia', 'Madrid', 'Barcelona', 'Valencia', 'Madrid', 'Barcelona', 'Valencia'],\n",
+    "    'Habitaciones': [3, 4, 2, 4, 5, 3, 2, 3, 4, 3],\n",
+    "    'Baños': [2, 2, 1, 3, 3, 2, 1, 2, 2, 2],\n",
+    "    'Superficie': [90, 120, 65, 110, 150, 85, 55, 95, 115, 100],\n",
+    "    'Precio': [210000, 450000, 320000, 280000, 600000, 410000, 180000, 390000, 550000, 250000],\n",
+    "    'Tipo_Propiedad': ['Piso', 'Piso', 'Apartamento', 'Piso', 'Chalet', 'Piso', 'Apartamento', 'Piso', 'Piso', 'Piso'],\n",
+    "    'Extras': ['Garaje', 'Piscina', np.nan, 'Garaje;Terraza', 'Piscina;Jardín', 'Terraza', np.nan, 'Garaje', 'Garaje;Piscina', 'Terraza']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9005c4c3",
+   "metadata": {},
+   "source": [
+    "### Preguntas de Negocio a Resolver"
    ]
   }
  ],
