Completed Market analysis por part 2.

--- a/Tema 2/PracticaFinalUd2SAA.ipynb
+++ b/Tema 2/PracticaFinalUd2SAA.ipynb
@@ -305,6 +305,389 @@
    "source": [
     "### Preguntas de Negocio a Resolver"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89eb5f1b",
+   "metadata": {},
+   "source": [
+    "#### Preparación de Datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e27d1f2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Referencia     Ciudad  Superficie  Precio    Precio_m2       Extras_lista\n",
+      "0     VLC-01   Valencia          90  210000  2333.333333           [Garaje]\n",
+      "1     MAD-01     Madrid         120  450000  3750.000000          [Piscina]\n",
+      "2     BCN-01  Barcelona          65  320000  4923.076923       [Sin extras]\n",
+      "3     VLC-02   Valencia         110  280000  2545.454545  [Garaje, Terraza]\n",
+      "4     MAD-02     Madrid         150  600000  4000.000000  [Piscina, Jardín]\n",
+      "5     BCN-02  Barcelona          85  410000  4823.529412          [Terraza]\n",
+      "6     VLC-03   Valencia          55  180000  3272.727273       [Sin extras]\n",
+      "7     MAD-03     Madrid          95  390000  4105.263158           [Garaje]\n",
+      "8     BCN-03  Barcelona         115  550000  4782.608696  [Garaje, Piscina]\n",
+      "9     VLC-04   Valencia         100  250000  2500.000000          [Terraza]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_inmuebles = pd.DataFrame(datos_inmuebles)\n",
+    "\n",
+    "#Hemos decidido aplicar un texto simple como \"Sin extras\" para que se vea mas claramente,\n",
+    "df_inmuebles['Extras'] = df_inmuebles['Extras'].fillna('Sin extras')\n",
+    "\n",
+    "#Aqui hemos decidido hacer un slpit para que sea una lista para mejor visualización y posible posterior uso con el método .explode()\n",
+    "df_inmuebles['Extras_lista'] = df_inmuebles['Extras'].str.split(';')\n",
+    "\n",
+    "df_inmuebles['Precio_m2'] = df_inmuebles['Precio'] / df_inmuebles['Superficie']\n",
+    "\n",
+    "print(df_inmuebles[['Referencia', 'Ciudad', 'Superficie', 'Precio', 'Precio_m2', 'Extras_lista']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b71deb81",
+   "metadata": {},
+   "source": [
+    "#### Análisis del Mercado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5e682ece",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"8\" halign=\"left\">Precio</th>\n",
+       "      <th colspan=\"8\" halign=\"left\">Superficie</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ciudad</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Barcelona</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>426666.666667</td>\n",
+       "      <td>115902.257671</td>\n",
+       "      <td>320000.0</td>\n",
+       "      <td>365000.0</td>\n",
+       "      <td>410000.0</td>\n",
+       "      <td>480000.0</td>\n",
+       "      <td>550000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>88.333333</td>\n",
+       "      <td>25.166115</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>115.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Madrid</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>480000.000000</td>\n",
+       "      <td>108166.538264</td>\n",
+       "      <td>390000.0</td>\n",
+       "      <td>420000.0</td>\n",
+       "      <td>450000.0</td>\n",
+       "      <td>525000.0</td>\n",
+       "      <td>600000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>121.666667</td>\n",
+       "      <td>27.537853</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>107.50</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valencia</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>230000.000000</td>\n",
+       "      <td>43969.686528</td>\n",
+       "      <td>180000.0</td>\n",
+       "      <td>202500.0</td>\n",
+       "      <td>230000.0</td>\n",
+       "      <td>257500.0</td>\n",
+       "      <td>280000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>88.750000</td>\n",
+       "      <td>23.935678</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>81.25</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>102.5</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Precio                                                              \\\n",
+       "           count           mean            std       min       25%       50%   \n",
+       "Ciudad                                                                         \n",
+       "Barcelona    3.0  426666.666667  115902.257671  320000.0  365000.0  410000.0   \n",
+       "Madrid       3.0  480000.000000  108166.538264  390000.0  420000.0  450000.0   \n",
+       "Valencia     4.0  230000.000000   43969.686528  180000.0  202500.0  230000.0   \n",
+       "\n",
+       "                              Superficie                                       \\\n",
+       "                75%       max      count        mean        std   min     25%   \n",
+       "Ciudad                                                                          \n",
+       "Barcelona  480000.0  550000.0        3.0   88.333333  25.166115  65.0   75.00   \n",
+       "Madrid     525000.0  600000.0        3.0  121.666667  27.537853  95.0  107.50   \n",
+       "Valencia   257500.0  280000.0        4.0   88.750000  23.935678  55.0   81.25   \n",
+       "\n",
+       "                                \n",
+       "             50%    75%    max  \n",
+       "Ciudad                          \n",
+       "Barcelona   85.0  100.0  115.0  \n",
+       "Madrid     120.0  135.0  150.0  \n",
+       "Valencia    95.0  102.5  110.0  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_inmuebles.groupby('Ciudad')[['Precio','Superficie']].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "703f3438",
+   "metadata": {},
+   "source": [
+    "La ciudad mas cara parece ser Madrid, ya que tiene mas precio medio, siendo Barcelona la segunda y Valencia con casi la mitad."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4f0b24f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ciudad: Barcelona\n",
+      "              Habitaciones     Baños    Precio\n",
+      "Habitaciones      1.000000  0.866025  0.992215\n",
+      "Baños             0.866025  1.000000  0.797017\n",
+      "Precio            0.992215  0.797017  1.000000\n",
+      "\n",
+      "Ciudad: Madrid\n",
+      "              Habitaciones     Baños    Precio\n",
+      "Habitaciones      1.000000  0.866025  0.970725\n",
+      "Baños             0.866025  1.000000  0.960769\n",
+      "Precio            0.970725  0.960769  1.000000\n",
+      "\n",
+      "Ciudad: Valencia\n",
+      "              Habitaciones     Baños    Precio\n",
+      "Habitaciones      1.000000  1.000000  0.928477\n",
+      "Baños             1.000000  1.000000  0.928477\n",
+      "Precio            0.928477  0.928477  1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ciudad, datos in df_inmuebles.groupby('Ciudad'):\n",
+    "    print(f\"\\nCiudad: {ciudad}\")\n",
+    "    print(datos[['Habitaciones', 'Baños', 'Precio']].corr())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d3055f0",
+   "metadata": {},
+   "source": [
+    "En Barcelona parece que a mas habitaciones mas caro es, mientras que los baños tienen menos correlación, en Madrid no ocurre tanto pero aun hay algo de disparidad, finalmente en Valencia parecen tener el mismo valor las habitaciones y los baños."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "05cc7bbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       Precio  Superficie    Precio_m2\n",
+      "Tipo_Propiedad                                        \n",
+      "Chalet          600000.000000  150.000000  4000.000000\n",
+      "Piso            362857.142857  102.142857  3552.447552\n",
+      "Apartamento     250000.000000   60.000000  4166.666667\n",
+      "\n",
+      "Tipo más caro: Chalet\n",
+      "Tipo con mayor superficie media: Chalet\n"
+     ]
+    }
+   ],
+   "source": [
+    "tipo_stats = df_inmuebles.groupby('Tipo_Propiedad')[['Precio', 'Superficie']].mean()\n",
+    "tipo_stats['Precio_m2'] = tipo_stats['Precio'] / tipo_stats['Superficie']\n",
+    "print(tipo_stats.sort_values('Precio', ascending=False))\n",
+    "\n",
+    "# Tipo más caro y más grande\n",
+    "tipo_mas_caro = tipo_stats['Precio'].idxmax()\n",
+    "tipo_mas_grande = tipo_stats['Superficie'].idxmax()\n",
+    "\n",
+    "print(f\"\\nTipo más caro: {tipo_mas_caro}\")\n",
+    "print(f\"Tipo con mayor superficie media: {tipo_mas_grande}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c61910",
+   "metadata": {},
+   "source": [
+    "Ciertamente los chalets son con diferencia las propiedades mas caras y con mayor superficioe, los pisos despúes aunque son los mas baratos por metro cuadrado mientras que los apartamentos son mas caros en proporcion pero mas baratos que todos en general."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a43e5033",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Porcentaje con piscina por ciudad:\n",
+      "      Ciudad  Porcentaje_Piscina\n",
+      "0  Barcelona           33.333333\n",
+      "1     Madrid           66.666667\n",
+      "2   Valencia            0.000000 \n",
+      "\n",
+      "Porcentaje con garaje por ciudad:\n",
+      "      Ciudad  Porcentaje_Garaje\n",
+      "0  Barcelona          33.333333\n",
+      "1     Madrid          33.333333\n",
+      "2   Valencia          50.000000 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_extras = df_inmuebles.explode('Extras_lista')\n",
+    "\n",
+    "tiene_piscina = df_extras[df_extras['Extras_lista'].str.contains('Piscina', na=False)]\n",
+    "tiene_garaje = df_extras[df_extras['Extras_lista'].str.contains('Garaje', na=False)]\n",
+    "\n",
+    "porcentaje_piscina = (\n",
+    "    tiene_piscina.groupby('Ciudad')['Referencia'].nunique() / \n",
+    "    df_inmuebles.groupby('Ciudad')['Referencia'].nunique() * 100\n",
+    ")\n",
+    "\n",
+    "porcentaje_garaje = (\n",
+    "    tiene_garaje.groupby('Ciudad')['Referencia'].nunique() / \n",
+    "    df_inmuebles.groupby('Ciudad')['Referencia'].nunique() * 100\n",
+    ")\n",
+    "\n",
+    "porcentaje_piscina = porcentaje_piscina.fillna(0).rename(None)\n",
+    "porcentaje_garaje = porcentaje_garaje.fillna(0).rename(None)\n",
+    "\n",
+    "print(\"Porcentaje con piscina por ciudad:\")\n",
+    "print(porcentaje_piscina.reset_index(name='Porcentaje_Piscina'), '\\n')\n",
+    "\n",
+    "print(\"Porcentaje con garaje por ciudad:\")\n",
+    "print(porcentaje_garaje.reset_index(name='Porcentaje_Garaje'), '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9684920",
+   "metadata": {},
+   "source": [
+    "De los edificios, Madrid tiene 2/3 de piscinas en sus edificios mientras que Barcelona solo tiene 1/3, con Valencia no teniendo ninguna piscina"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2b39c6",
+   "metadata": {},
+   "source": [
+    "Con los Garajes, la mitad de los edificios de Valencia tienen garaje mientras que tanto Barcelona como Madrid solo tienen un tercio de sus viviendas"
+   ]
   }
  ],
  "metadata": {
