Finalized the part 2 of the assignment with the recomendation and segmentation.

--- a/Tema 2/PracticaFinalUd2SAA.ipynb
+++ b/Tema 2/PracticaFinalUd2SAA.ipynb
@@ -688,6 +688,81 @@
    "source": [
     "Con los Garajes, la mitad de los edificios de Valencia tienen garaje mientras que tanto Barcelona como Madrid solo tienen un tercio de sus viviendas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01330dea",
+   "metadata": {},
+   "source": [
+    "#### Segmentación y Recomendación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c15ebe42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 propiedades con mejor relación superficie-precio:\n",
+      "  Referencia    Ciudad  Superficie  Precio    Precio_m2 Tipo_Propiedad\n",
+      "0     VLC-01  Valencia          90  210000  2333.333333           Piso\n",
+      "9     VLC-04  Valencia         100  250000  2500.000000           Piso\n",
+      "3     VLC-02  Valencia         110  280000  2545.454545           Piso\n"
+     ]
+    }
+   ],
+   "source": [
+    "mejor_relacion = df_inmuebles.sort_values('Precio_m2').head(3)\n",
+    "\n",
+    "print(\"3 propiedades con mejor relación superficie-precio:\")\n",
+    "print(mejor_relacion[['Referencia', 'Ciudad', 'Superficie', 'Precio', 'Precio_m2', 'Tipo_Propiedad']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e01417b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Propiedades de interés para familias (más de 3 habitaciones y con garaje):\n",
+      "  Referencia     Ciudad  Habitaciones  Baños  Superficie  Precio  \\\n",
+      "3     VLC-02   Valencia             4      3         110  280000   \n",
+      "8     BCN-03  Barcelona             4      2         115  550000   \n",
+      "\n",
+      "        Extras_lista  \n",
+      "3  [Garaje, Terraza]  \n",
+      "8  [Garaje, Piscina]  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtrar propiedades: más de 3 habitaciones y con garaje\n",
+    "propiedades_familia = df_inmuebles[\n",
+    "    (df_inmuebles['Habitaciones'] > 3) & \n",
+    "    (df_inmuebles['Extras_lista'].apply(lambda x: 'Garaje' in x))\n",
+    "]\n",
+    "\n",
+    "propiedades_familia = propiedades_familia.sort_values('Precio')\n",
+    "\n",
+    "print(\"Propiedades de interés para familias (más de 3 habitaciones y con garaje):\")\n",
+    "print(propiedades_familia[['Referencia', 'Ciudad', 'Habitaciones', 'Baños', 'Superficie', 'Precio', 'Extras_lista']])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da0a0cb",
+   "metadata": {},
+   "source": [
+    "*A lo largo del código he visto innecesario utilizar multiples comentarios puesto que el código deberia explicarse a si mismo. Ya que estamos siguiendo las directrices de código limpio que multiples programadores han visto adecuadas, por ejemplo aqui dejo un enlace a un documento por Robert C. Martin. [Clean Code](https://observablehq.com/@macorreag1/clean-code)*\n"
+   ]
   }
  ],
  "metadata": {
