--- a/Tema 2/PracticaFinalUd2SAA.ipynb
+++ b/Tema 2/PracticaFinalUd2SAA.ipynb
@@ -344,7 +344,7 @@
     "#Hemos decidido aplicar un texto simple como \"Sin extras\" para que se vea mas claramente,\n",
     "df_inmuebles['Extras'] = df_inmuebles['Extras'].fillna('Sin extras')\n",
     "\n",
-    "#Aqui hemos decidido hacer un slpit para que sea una lista para mejor visualización y posible posterior uso con el método .explode()\n",
+    "#Aqui hemos decidido hacer un split para que sea una lista para mejor visualización y posible posterior uso con el método .explode()\n",
     "df_inmuebles['Extras_lista'] = df_inmuebles['Extras'].str.split(';')\n",
     "\n",
     "df_inmuebles['Precio_m2'] = df_inmuebles['Precio'] / df_inmuebles['Superficie']\n",
